--- a/src/sass/modules/banner/_banner.scss
+++ b/src/sass/modules/banner/_banner.scss
@@ -1,7 +1,7 @@
 /* Banner Styles
   =========================================================================== */
 .page-banner {
-  background-color: $gray-150;
+  background-color: $color-gray-3;
   text-align: center;
   padding: 2rem 1rem;
   position: absolute;
@@ -10,12 +10,12 @@
   width: 100%;
 
   h4 {
-    color: $gray-700;
+    color: $color-subtext;
     margin-top: 0.5rem;
   }
 
   .button--banner {
-    @include button($gray-400, $white);
+    //@include button($gray-400, $color-white);
     @extend %button--smooth;
     position: absolute;
     top: 2.15rem;
@@ -25,7 +25,7 @@
 
 .card-banner {
   align-items: baseline;
-  background-color: #D4D4D4;
+  background-color: $color-gray-3;
   display: flex;
   padding: $grid-gutter;
   margin: 0 -#{$grid-gutter};
@@ -41,6 +41,7 @@
     border-bottom: solid 2px;
     color: inherit;
     cursor: pointer;
+    text-decoration: none;
 
     &:focus,
     &:hover {
@@ -53,18 +54,18 @@
 
   &.has-success,
   &.has-error {
-    p { color: $white; }
-    .dashing-icon:before { color: $white;}
+    p { color: $color-white; }
+    .dashing-icon:before { color: $color-white;}
   }
 
   &.has-warning {
-    p { color: $black; }
-    .dashing-icon:before { color: $black;}
+    p { color: $color-black; }
+    .dashing-icon:before { color: $color-black;}
   }
 
-  &.has-success { background-color: $green; }
-  &.has-warning { background-color: $orange; }
-  &.has-error   { background-color: $red; }
+  &.has-success { background-color: $color-green; }
+  &.has-warning { background-color: $color-orange; }
+  &.has-error   { background-color: $color-red; }
 
   .dashing-icon { margin-right: 0.5rem; }
 
