--- a/src/sass/modules/typography/_typography.scss
+++ b/src/sass/modules/typography/_typography.scss
@@ -12,8 +12,8 @@ $font-weight-normal:    400;
 $font-weight-semibold:  600;
 $font-weight-bold:      700;
 
-$font-family-header:    "Source Sans Pro", sans-serif;
-$font-family-body:      "Source Sans Pro", sans-serif;
+$font-family-header:    "Source Sans Pro", sans-serif !default;
+$font-family-body:      "Source Sans Pro", sans-serif !default;
 
 /* Typography Utility Classes
   =========================================================================== */
@@ -47,13 +47,13 @@ $font-family-body:      "Source Sans Pro", sans-serif;
 }
 
 body {
-  background-color: $gray-100;
+  background-color: $color-background;
   font-family: $font-family-body;
   font-size: $font-size-normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: $gray-900;
+  color: $color-text;
   font-family: $font-family-header;
   font-weight: $font-weight-semibold;
   margin: 0;
@@ -68,31 +68,25 @@ small, .font-size--small  { font-size: $font-size-small; }
 .font-size--xsmall        { font-size: $font-size-xsmall; }
 
 a {
-  color: $blue;
+  color: $color-link;
   cursor: pointer;
   font-weight: $font-weight-semibold;
-  text-decoration: none;
+  text-decoration: underline;
 
   &:hover, &:focus {
-    color: $blue-400;
-    text-decoration: underline;
+    opacity: .7;
     text-decoration-color: inherit;
   }
 
-  &.button {
-    text-decoration: none;
-    display: inline-block;
-  }
-  
   &.no-decoration {
     text-decoration: none;
-    color: $gray-900;
+    color: $color-text;
     font-weight: $font-weight-normal;
   }
 }
 
 p, li.text-list_item {
-  color: $brand-black;
+  color: $color-black;
   font-size: $font-size-normal;
   line-height: $space-l;
   margin: 0;
