--- a/src/sass/example-page/color.scss
+++ b/src/sass/example-page/color.scss
@@ -99,7 +99,7 @@ $green10: #78C696;
 
 //small color card
 .card-color--small {
-  border-bottom: 2px solid $brand-light-gray;
+  border-bottom: 2px solid $color-border;
   display: flex;
   padding: 0.2rem 0 0.2rem 0.5rem;
   position: relative;
@@ -183,21 +183,21 @@ $green10: #78C696;
 
 //NEEDS THEME
 .color--discounts { @include color-guide($color--discounts, "#5678BC", "$color--discounts"); }
-.color--sharable { @include color-guide($color--sharable, "#47CB86", "$color--sharable"); .button--copy { color: $black !important;}}
+.color--sharable { @include color-guide($color--sharable, "#47CB86", "$color--sharable"); .button--copy { color: $color-black !important;}}
 .color--co-share { @include color-guide($color--co-share, "#268654", "$color--co-share"); }
-.color--threshold { @include color-guide($color--threshold, "#47CB86", "$color--threshold"); .button--copy { color: $black !important;}}
+.color--threshold { @include color-guide($color--threshold, "#47CB86", "$color--threshold"); .button--copy { color: $color-black !important;}}
 .color--spn { @include color-guide($color--spn, "#8F669C", "$color--spn"); }
-.color--missing-info { @include color-guide($color--missing-info, "#F7AD4B", "$color--missing-info"); .button--copy { color: $black !important;}}
+.color--missing-info { @include color-guide($color--missing-info, "#F7AD4B", "$color--missing-info"); .button--copy { color: $color-black !important;}}
 .color--not-sharable { @include color-guide($color--not-sharable, "#F76553", "$color--not-sharable"); }
-.color--pending { @include color-guide($color--pending, "#A1A1A1", "$color--pending"); .button--copy { color: $black !important;}}
+.color--pending { @include color-guide($color--pending, "#A1A1A1", "$color--pending"); .button--copy { color: $color-black !important;}}
 
 //UI THEME
-.color--ui-blue     { @include color-guide($blue, "#3F70C9", "$blue"); }
-.color--ui-green    { @include color-guide($green, "#09AA66", "$green");}
-.color--ui-orange   { @include color-guide($orange, "#FFA11F", "$orange");}
-.color--ui-red      { @include color-guide($red, "#DA3D30", "$red");}
-.color--ui-purple   { @include color-guide($ui-purple, "#9F65AE", "$purple");}
-.color--ui-gray     { @include color-guide($ui-gray, "#D4D4D4", "$gray");}
+// .color--ui-blue     { @include color-guide($color-blue, "#3F70C9", "$blue"); }
+// .color--ui-green    { @include color-guide($color-green, "#09AA66", "$green");}
+// .color--ui-orange   { @include color-guide($color-orange, "#FFA11F", "$orange");}
+// .color--ui-red      { @include color-guide($color-red, "#DA3D30", "$red");}
+// .color--ui-purple   { @include color-guide($color-purple, "#9F65AE", "$purple");}
+// .color--ui-gray     { @include color-guide($color-gray, "#D4D4D4", "$gray");}
 
 
 //SYSTEM THEME
@@ -297,7 +297,7 @@ $green10: #78C696;
 .color--purple-900   { @include color-guide($purple-900, "#0F001C", "$purple-900"); }
 
 .card--header--color {
-  color: $white;
+  color: $color-white;
   font-weight: 600;
   font-size: $font-size-medium;
   padding: 0.5rem 0.7rem !important;
@@ -313,8 +313,8 @@ $green10: #78C696;
 .card--pass {
   background-color: $ui-green;
   border-color: $ui-green;
-  color: $white;
-  label, h2 { color: $white; }
+  color: $color-white;
+  label, h2 { color: $color-white; }
 }
 
 .color-input { position: relative; }
@@ -386,7 +386,7 @@ $green10: #78C696;
 
 .color-right, .card-color--small {
   label, span { display: block; }
-  label { font-size: .8rem; font-weight: 600; color: $black; margin-bottom: -0.5rem;}
+  label { font-size: .8rem; font-weight: 600; color: $color-black; margin-bottom: -0.5rem;}
   span { font-size: .9rem; }
 }
 
@@ -401,7 +401,7 @@ Code tab color sass
   overflow: auto;
 
   .column-flex {
-    color: $white;
+    color: $color-white;
     font-weight: 600;
     text-align: center;
     padding: 3rem 0;
@@ -448,104 +448,153 @@ Code tab color sass
   }
 }
 
-.example-flex .column-flex {
-  &.gray-50  { background-color: $gray-50;  color: $gray-900; }
-  &.gray-100 { background-color: $gray-100; color: $gray-900; }
-  &.gray-150 { background-color: $gray-150; color: $gray-900; }
-  &.gray-200 { background-color: $gray-200; color: $gray-900; }
-  &.gray-250 { background-color: $gray-250; color: $gray-900; }
-  &.gray-300 { background-color: $gray-300; color: $gray-900; }
-  &.gray-400 { background-color: $gray-400; }
-  &.gray-500 { background-color: $gray-500; }
-  &.gray-600 { background-color: $gray-600; }
-  &.gray-700 { background-color: $gray-700; }
-  &.gray-800 { background-color: $gray-800; }
-  &.gray-900 { background-color: $gray-900; }
-  &.gray     { background-color: $gray;     }
-
-  &.gray-50c  { background-color: $gray-50c;  color: $gray-900c; }
-  &.gray-100c { background-color: $gray-100c; color: $gray-900c; }
-  &.gray-150c { background-color: $gray-150c; color: $gray-900c; }
-  &.gray-200c { background-color: $gray-200c; color: $gray-900c; }
-  &.gray-250c { background-color: $gray-250c; color: $gray-900c; }
-  &.gray-300c { background-color: $gray-300c; color: $gray-900c; }
-  &.gray-400c { background-color: $gray-400c; }
-  &.gray-500c { background-color: $gray-500c; }
-  &.gray-600c { background-color: $gray-600c; }
-  &.gray-700c { background-color: $gray-700c; }
-  &.gray-800c { background-color: $gray-800c; }
-  &.gray-900c { background-color: $gray-900c; }
-  &.gray-cool { background-color: $gray-cool; }
-
-  &.blue-50  { background-color: $blue-50;  color: $blue-900; }
-  &.blue-100 { background-color: $blue-100; color: $blue-900; }
-  &.blue-200 { background-color: $blue-200; color: $blue-900; }
-  &.blue-300 { background-color: $blue-300; color: $blue-900; }
-  &.blue-400 { background-color: $blue-400; }
-  &.blue-500 { background-color: $blue-500; }
-  &.blue-600 { background-color: $blue-600; }
-  &.blue-700 { background-color: $blue-700; }
-  &.blue-800 { background-color: $blue-800; }
-  &.blue-900 { background-color: $blue-900; }
-  &.blue     { background-color: $blue;     }
-
-  &.red-50  { background-color: $red-50;  color: $red-900; }
-  &.red-100 { background-color: $red-100; color: $red-900; }
-  &.red-200 { background-color: $red-200; color: $red-900; }
-  &.red-300 { background-color: $red-300; color: $red-900; }
-  &.red-400 { background-color: $red-400; }
-  &.red-500 { background-color: $red-500; }
-  &.red-600 { background-color: $red-600; }
-  &.red-700 { background-color: $red-700; }
-  &.red-800 { background-color: $red-800; }
-  &.red-900 { background-color: $red-900; }
-  &.red     { background-color: $red;     }
-
-  &.orange-50  { background-color: $orange-50;  color: $orange-900; }
-  &.orange-100 { background-color: $orange-100; color: $orange-900; }
-  &.orange-200 { background-color: $orange-200; color: $orange-900; }
-  &.orange-300 { background-color: $orange-300; color: $orange-900; }
-  &.orange-400 { background-color: $orange-400; }
-  &.orange-500 { background-color: $orange-500; }
-  &.orange-600 { background-color: $orange-600; }
-  &.orange-700 { background-color: $orange-700; }
-  &.orange-800 { background-color: $orange-800; }
-  &.orange-900 { background-color: $orange-900; }
-  &.orange     { background-color: $orange;     }
-
-  &.green-50  { background-color: $green-50;  color: $green-900; }
-  &.green-100 { background-color: $green-100; color: $green-900; }
-  &.green-200 { background-color: $green-200; color: $green-900; }
-  &.green-300 { background-color: $green-300; color: $green-900; }
-  &.green-400 { background-color: $green-400; }
-  &.green-500 { background-color: $green-500; }
-  &.green-600 { background-color: $green-600; }
-  &.green-700 { background-color: $green-700; }
-  &.green-800 { background-color: $green-800; }
-  &.green-900 { background-color: $green-900; }
-  &.green     { background-color: $green;     }
-
-  &.purple-50  { background-color: $purple-50;  color: $purple-900; }
-  &.purple-100 { background-color: $purple-100; color: $purple-900; }
-  &.purple-200 { background-color: $purple-200; color: $purple-900; }
-  &.purple-300 { background-color: $purple-300; color: $purple-900; }
-  &.purple-400 { background-color: $purple-400; }
-  &.purple-500 { background-color: $purple-500; }
-  &.purple-600 { background-color: $purple-600; }
-  &.purple-700 { background-color: $purple-700; }
-  &.purple-800 { background-color: $purple-800; }
-  &.purple-900 { background-color: $purple-900; }
-  &.purple     { background-color: $purple;     }
-
-  &.yellow-50  { background-color: $yellow-50;  color: $yellow-900; }
-  &.yellow-100 { background-color: $yellow-100; color: $yellow-900; }
-  &.yellow-200 { background-color: $yellow-200; color: $yellow-900; }
-  &.yellow-300 { background-color: $yellow-300; color: $yellow-900; }
-  &.yellow-400 { background-color: $yellow-400; color: $yellow-900; }
-  &.yellow-500 { background-color: $yellow-500; }
-  &.yellow-600 { background-color: $yellow-600; }
-  &.yellow-700 { background-color: $yellow-700; }
-  &.yellow-800 { background-color: $yellow-800; }
-  &.yellow-900 { background-color: $yellow-900; }
-  &.yellow     { background-color: $yellow;     }
+.color-group {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
+
+.color-square,
+.color-rectangle {
+  height: 75px;
+  width: 125px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  border-radius: 5px;
+  margin-right: $space-xs;
+  margin-bottom: $space-xs;
+
+  &.color-gradient { width: calc((125px * 2) + #{$space-xs}); }
+
+  input {
+    background-color: transparent;
+    border: none;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+    margin: -1rem;
+    outline: none;
+  }
+
+  &.color-purple { background-color: $color-purple; color: $color-white; }
+  &.color-blue { background-color: $color-blue; color: $color-white; }
+  &.color-green { background-color: $color-green; color: $color-white; }
+  &.color-orange { background-color: $color-orange; color: $color-white; }
+  &.color-red { background-color: $color-red; color: $color-white; }
+
+  &.color-black { background-color: $color-black; color: $color-white; }
+  &.color-gray-4 { background-color: $color-gray-4; color: $color-white; }
+  &.color-gray-3 { background-color: $color-gray-3; color: $color-black; }
+  &.color-gray-2 { background-color: $color-gray-2; color: $color-black; }
+  &.color-gray-1 { background-color: $color-gray-1; color: $color-black; }
+  &.color-white { background-color: $color-white; color: $color-black; border: 2px solid $color-gray-2; }
+
+  &.color-data-teal { background-color: $color-data-teal; color: $color-white; }
+  &.color-data-purple { background-color: $color-data-purple; color: $color-white; }
+
+  &.color-gradient { background-image: $color-gradient; color: $color-white; }
+}
+
+// .example-flex .column-flex {
+//   &.gray-50  { background-color: $gray-50;  color: $gray-900; }
+//   &.gray-100 { background-color: $gray-100; color: $gray-900; }
+//   &.gray-150 { background-color: $color-gray-3; color: $gray-900; }
+//   &.gray-200 { background-color: $color-gray-3; color: $gray-900; }
+//   &.gray-250 { background-color: $color-gray-3; color: $gray-900; }
+//   &.gray-300 { background-color: $gray-300; color: $gray-900; }
+//   &.gray-400 { background-color: $gray-400; }
+//   &.gray-500 { background-color: $gray-500; }
+//   &.gray-600 { background-color: $gray-600; }
+//   &.gray-700 { background-color: $gray-700; }
+//   &.gray-800 { background-color: $gray-800; }
+//   &.gray-900 { background-color: $gray-900; }
+//   &.gray     { background-color: $gray;     }
+//
+//   &.gray-50c  { background-color: $gray-50c;  color: $gray-900c; }
+//   &.gray-100c { background-color: $gray-100c; color: $gray-900c; }
+//   &.gray-150c { background-color: $gray-150c; color: $gray-900c; }
+//   &.gray-200c { background-color: $gray-200c; color: $gray-900c; }
+//   &.gray-250c { background-color: $gray-250c; color: $gray-900c; }
+//   &.gray-300c { background-color: $gray-300c; color: $gray-900c; }
+//   &.gray-400c { background-color: $gray-400c; }
+//   &.gray-500c { background-color: $gray-500c; }
+//   &.gray-600c { background-color: $gray-600c; }
+//   &.gray-700c { background-color: $gray-700c; }
+//   &.gray-800c { background-color: $gray-800c; }
+//   &.gray-900c { background-color: $gray-900c; }
+//   &.gray-cool { background-color: $gray-cool; }
+//
+//   &.blue-50  { background-color: $blue-50;  color: $blue-900; }
+//   &.blue-100 { background-color: $blue-100; color: $blue-900; }
+//   &.blue-200 { background-color: $blue-200; color: $blue-900; }
+//   &.blue-300 { background-color: $blue-300; color: $blue-900; }
+//   &.blue-400 { background-color: $blue-400; }
+//   &.blue-500 { background-color: $blue-500; }
+//   &.blue-600 { background-color: $blue-600; }
+//   &.blue-700 { background-color: $blue-700; }
+//   &.blue-800 { background-color: $blue-800; }
+//   &.blue-900 { background-color: $blue-900; }
+//   &.blue     { background-color: $blue;     }
+//
+//   &.red-50  { background-color: $red-50;  color: $red-900; }
+//   &.red-100 { background-color: $red-100; color: $red-900; }
+//   &.red-200 { background-color: $red-200; color: $red-900; }
+//   &.red-300 { background-color: $red-300; color: $red-900; }
+//   &.red-400 { background-color: $red-400; }
+//   &.red-500 { background-color: $red-500; }
+//   &.red-600 { background-color: $red-600; }
+//   &.red-700 { background-color: $red-700; }
+//   &.red-800 { background-color: $red-800; }
+//   &.red-900 { background-color: $red-900; }
+//   &.red     { background-color: $red;     }
+//
+//   &.orange-50  { background-color: $orange-50;  color: $orange-900; }
+//   &.orange-100 { background-color: $orange-100; color: $orange-900; }
+//   &.orange-200 { background-color: $orange-200; color: $orange-900; }
+//   &.orange-300 { background-color: $orange-300; color: $orange-900; }
+//   &.orange-400 { background-color: $orange-400; }
+//   &.orange-500 { background-color: $orange-500; }
+//   &.orange-600 { background-color: $orange-600; }
+//   &.orange-700 { background-color: $orange-700; }
+//   &.orange-800 { background-color: $orange-800; }
+//   &.orange-900 { background-color: $orange-900; }
+//   &.orange     { background-color: $orange;     }
+//
+//   &.green-50  { background-color: $green-50;  color: $green-900; }
+//   &.green-100 { background-color: $green-100; color: $green-900; }
+//   &.green-200 { background-color: $green-200; color: $green-900; }
+//   &.green-300 { background-color: $green-300; color: $green-900; }
+//   &.green-400 { background-color: $green-400; }
+//   &.green-500 { background-color: $green-500; }
+//   &.green-600 { background-color: $green-600; }
+//   &.green-700 { background-color: $green-700; }
+//   &.green-800 { background-color: $green-800; }
+//   &.green-900 { background-color: $green-900; }
+//   &.green     { background-color: $green;     }
+//
+//   &.purple-50  { background-color: $purple-50;  color: $purple-900; }
+//   &.purple-100 { background-color: $purple-100; color: $purple-900; }
+//   &.purple-200 { background-color: $purple-200; color: $purple-900; }
+//   &.purple-300 { background-color: $purple-300; color: $purple-900; }
+//   &.purple-400 { background-color: $purple-400; }
+//   &.purple-500 { background-color: $purple-500; }
+//   &.purple-600 { background-color: $purple-600; }
+//   &.purple-700 { background-color: $purple-700; }
+//   &.purple-800 { background-color: $purple-800; }
+//   &.purple-900 { background-color: $purple-900; }
+//   &.purple     { background-color: $purple;     }
+//
+//   &.yellow-50  { background-color: $yellow-50;  color: $yellow-900; }
+//   &.yellow-100 { background-color: $yellow-100; color: $yellow-900; }
+//   &.yellow-200 { background-color: $yellow-200; color: $yellow-900; }
+//   &.yellow-300 { background-color: $yellow-300; color: $yellow-900; }
+//   &.yellow-400 { background-color: $yellow-400; color: $yellow-900; }
+//   &.yellow-500 { background-color: $yellow-500; }
+//   &.yellow-600 { background-color: $yellow-600; }
+//   &.yellow-700 { background-color: $yellow-700; }
+//   &.yellow-800 { background-color: $yellow-800; }
+//   &.yellow-900 { background-color: $yellow-900; }
+//   &.yellow     { background-color: $yellow;     }
+// }
