--- a/src/sass/example-page/example-css-grid.scss
+++ b/src/sass/example-page/example-css-grid.scss
@@ -2,8 +2,8 @@
 Display Compatibility Banner
 -------------------------------- */
 .grid-compatibility {
-	background-color: $red-500;
-	color: $white;
+	background-color: $color-red;
+	color: $color-white;
 	text-align: center;
 	padding: 1rem;
 	margin: -1rem 0rem;
@@ -17,30 +17,30 @@ Example App Mockups Below
 
 .grid-highlight, .grid-highlight > div{
 	background-color: rgba(221, 226, 230, 0.5);
-	border: 2px solid $gray-150c;
+	border: 2px solid $color-border;
 	border-radius: 5px;
 }
 
 .grid-highlight-blue, .grid-highlight-blue > div {
-    background-color: rgba(81, 116, 186, 0.5);
-    border: 2px solid #6A8DD3;
-    color: $white;
+    background-color: rgba($color-blue, 0.5);
+    border: 2px solid $color-blue;
+    color: $color-white;
     text-align: center;
     border-radius: 5px;
 }
 
 .grid-highlight-red, .grid-highlight-red > div {
-    background-color: rgba(218, 61, 48, 0.5);
-    border: 2px solid #DA3D30;
-    color: $white;
+    background-color: rgba($color-red, 0.5);
+    border: 2px solid $color-red;
+    color: $color-white;
     text-align: center;
     border-radius: 5px;
 }
 
 .grid-highlight-green, .grid-highlight-green > div {
-    background-color: rgba(9, 170, 102, 0.5);
-    border: 2px solid #09AA66;
-    color: $white;
+    background-color: rgba($color-green, 0.5);
+    border: 2px solid $color-green;
+    color: $color-white;
     text-align: center;
     border-radius: 5px;
 }
